--- a/styles/mixin/_zIndex.scss
+++ b/styles/mixin/_zIndex.scss
@@ -4,3 +4,4 @@ $z-index-loading-widget: 30;
 $z-index-dropdown: 40;
 $z-index-toolbar-menu: 50;
 $z-index-viewport-dialog: 60;
+$z-index-panning-overlay: 70;
